--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,18 @@
         "@types/node": "^14.14.6",
         "@types/react": "^16.9.55",
         "@types/react-dom": "^16.9.9",
+        "@types/react-loader-spinner": "^3.1.1",
         "@types/react-router-dom": "^5.1.6",
         "axios": "^0.21.0",
         "bootstrap": "^4.5.3",
+        "lodash": "^4.17.20",
         "node-sass": "^4.14.1",
         "react": "^17.0.0",
         "react-bootstrap": "^1.4.0",
+        "react-bootstrap-spinner": "^1.0.0",
         "react-dom": "^17.0.0",
         "react-icons": "^3.11.0",
+        "react-loader-spinner": "^3.1.14",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.4",
         "styled-components": "^5.2.1",
@@ -45,6 +49,7 @@
         ]
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.165",
         "@types/styled-components": "^5.1.4"
     }
 }
