--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.11.0",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
@@ -15,13 +16,16 @@
         "axios": "^0.21.0",
         "bootstrap": "^4.5.3",
         "lodash": "^4.17.20",
+        "moment": "^2.29.1",
         "node-sass": "^4.14.1",
         "react": "^17.0.0",
         "react-bootstrap": "^1.4.0",
         "react-bootstrap-spinner": "^1.0.0",
+        "react-datetime": "^3.0.4",
         "react-dom": "^17.0.0",
         "react-icons": "^3.11.0",
         "react-loader-spinner": "^3.1.14",
+        "react-moment": "^1.0.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.4",
         "styled-components": "^5.2.1",
