--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
         "react-moment": "^1.0.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.4",
+        "socket.io-client": "^2.3.1",
         "styled-components": "^5.2.1",
         "typescript": "^4.0.5"
     },
@@ -54,6 +55,7 @@
     },
     "devDependencies": {
         "@types/lodash": "^4.14.165",
+        "@types/socket.io-client": "^1.4.34",
         "@types/styled-components": "^5.1.4"
     }
 }
