--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ backend/__pycache__/
 backend/.vscode/
 backend/venv/
 backend/static
+backend/old-htmls
 backend/blueprints/__pycache__/
 
 # FRONTEND
