--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,19 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "@types/html2canvas": "0.0.36",
         "@types/jest": "^26.0.15",
+        "@types/jspdf": "^1.3.3",
         "@types/node": "^14.14.6",
         "@types/react": "^16.9.55",
         "@types/react-dom": "^16.9.9",
         "@types/react-loader-spinner": "^3.1.1",
+        "@types/react-pdf": "^5.0.0",
         "@types/react-router-dom": "^5.1.6",
         "axios": "^0.21.0",
         "bootstrap": "^4.5.3",
+        "html2canvas": "^1.0.0-rc.7",
+        "jspdf": "^2.1.1",
         "lodash": "^4.17.20",
         "moment": "^2.29.1",
         "node-sass": "^4.14.1",
@@ -28,6 +33,7 @@
         "react-moment": "^1.0.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.4",
+        "react-to-pdf": "0.0.13",
         "socket.io-client": "^2.3.1",
         "styled-components": "^5.2.1",
         "typescript": "^4.0.5"
