--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "@types/react": "^16.9.55",
         "@types/react-dom": "^16.9.9",
         "@types/react-loader-spinner": "^3.1.1",
+        "@types/react-native-push-notification": "^5.0.5",
         "@types/react-pdf": "^5.0.0",
         "@types/react-router-dom": "^5.1.6",
         "axios": "^0.21.0",
@@ -31,6 +32,7 @@
         "react-icons": "^3.11.0",
         "react-loader-spinner": "^3.1.14",
         "react-moment": "^1.0.0",
+        "react-push-notification": "^1.3.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.4",
         "react-to-pdf": "0.0.13",
