--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,11 @@
-
+schedule==0.6.0
+requests_html==0.10.0
+Flask==1.1.2
+pywebcopy==6.3.0
+Flask_Mail==0.9.1
+Flask_MySQLdb==0.2.0
+Flask_JWT_Extended==3.24.1
+Flask_Cors==3.0.9
+selenium==3.141.0
+beautifulsoup4==4.9.3
+PyYAML==5.3.1
