--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ materialy/
 pdf/Tresc-przedTata.docx
 pdf/notatki.docx
 pdf/Seminarium-dyplomowe
-
+pdf/App-screens
 
 # BACKEND
 backend/__pycache__/
