--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
         "styled-components": "^5.2.1",
         "typescript": "^4.0.5"
     },
+    "homepage": ".",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
