react router + nginx bug fixed

--- a/custom-nginx.conf
+++ b/custom-nginx.conf
@@ -40,9 +40,10 @@ http {
 
         #access_log  logs/host.access.log  main;
 	root C:/Users/janku/OneDrive/WebsiteMonitor/frontend/build;
-	index index.html index.htm;
-        location / {
-            try_files $uri $uri/ index.html=404;
+ 	index index.html index.htm;
+
+        location / {          
+          try_files $uri $uri/ /index.html$is_args$args;
         }
 
 	location /api {
