--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+WebsiteMonitorCD.zip
 materialy/
-pdf/Seminarium-dyplomowe
-pdf/App-screens
+pdf/
+notatki-obrona.docx
 
 # BACKEND
 backend/__pycache__/
