--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ backend/old-htmls
 backend/blueprints/__pycache__/
 backend/debug.log
 backend/mail_man-config.yaml
+backend/db-config.yaml
 
 # FRONTEND
 frontend/node_modules/
